--- a/templates/views/beach-bash-tournament.jade
+++ b/templates/views/beach-bash-tournament.jade
@@ -65,7 +65,7 @@ block content
                 .panel.panel-default
                     .panel-heading 
                         .panel-title How much is the bid fee?
-                    .panel-body It's <strong>$400</strong>, we use this for field permits and tournament drinks/snacks.  Plus if your team captain has played South Florida league, you'll get a $50 discount. 🎉 
+                    .panel-body It's <strong>$400</strong>, we use this for field permits and tournament drinks/snacks. 
                 .panel.panel-default
                     .panel-heading
                         .panel-title What's the gender ratio?  How many players?
