Adding registration page basic setup, adjusting css

--- a/app/next/public/styles/site/_layout.scss
+++ b/app/next/public/styles/site/_layout.scss
@@ -1,4 +1,4 @@
-@import "./../../../node_modules/sass-mediaqueries/media-queries";
+@import "./../../../../../node_modules/sass-mediaqueries/media-queries";
 
 @keyframes fadein {
   from { opacity: 0; transform: translateY(100%)}
