--- a/app/next/public/styles/site/_variables.scss
+++ b/app/next/public/styles/site/_variables.scss
@@ -8,3 +8,5 @@ $headings-font-weight: 700;
 $navbar-height: 50px;
 
 $brand-primary: darken(#9b59b6, 10%);
+//$font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+//$headings-font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
