--- a/app/next/public/styles/site/_layout.scss
+++ b/app/next/public/styles/site/_layout.scss
@@ -372,3 +372,43 @@
   }
 }
 
+
+.key-takeaway {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  
+  @media screen and (min-width: 768px) {
+    div {
+      width: 50%;
+    }
+  }
+  
+  div {
+    margin: 1rem;
+  }
+  
+  &.left-layout {
+    justify-content: left;
+  }
+  
+  &.right-layout {
+    justify-content: right;
+  }
+  
+  h2 {
+    text-transform: uppercase;
+    font-size: 5rem;
+    text-shadow: 0px 0px 15px black;
+  }
+  p {
+    background: rgb(0 0 0 / 60%);
+    text-shadow: 0px 0px 20px black;
+    padding: 1rem;
+    font-size: 2rem;
+    font-weight: 400;  }
+}
