--- a/app/next/public/styles/site.css
+++ b/app/next/public/styles/site.css
@@ -7500,8 +7500,9 @@ button.close {
 }
 .key-takeaway h2 {
   text-transform: uppercase;
-  font-size: 5rem;
-  text-shadow: 0px 0px 15px black;
+  font-style: italic;
+  text-shadow: 4px 4px 0px #000000, 0px 0px 15px black;
+  font-size: 6rem;
 }
 .key-takeaway p {
   background: rgba(0, 0, 0, 0.6);
