--- a/app/next/public/styles/bootstrap/bootstrap/_glyphicons.scss
+++ b/app/next/public/styles/bootstrap/bootstrap/_glyphicons.scss
@@ -7,6 +7,7 @@
 //
 // <a href="#"><span class="glyphicon glyphicon-star"></span> Star</a>
 
+$icon-font-path: "../fonts/";
 @at-root {
   // Import the fonts
   @font-face {
