Added homepage layout that surfaces content from throughout site

--- a/app/next/public/styles/site.css
+++ b/app/next/public/styles/site.css
@@ -7537,4 +7537,13 @@ button.close {
   font-weight: 400;
 }
 
+.homepage-news-card {
+  margin-bottom: 1rem;
+}
+.homepage-news-card img {
+  aspect-ratio: 2;
+  object-fit: cover;
+  margin-bottom: 0.5rem;
+}
+
 /*# sourceMappingURL=site.css.map */
