Fixing closing registration date

--- a/app/next/public/styles/site.css
+++ b/app/next/public/styles/site.css
@@ -7242,7 +7242,7 @@ button.close {
 .features {
   color: black;
   font-size: 1.15em;
-  padding: 1em 0em;
+  padding: 1em 0;
   position: relative;
   background: white;
 }
@@ -7526,12 +7526,12 @@ button.close {
 .key-takeaway h2 {
   text-transform: uppercase;
   font-style: italic;
-  text-shadow: 4px 4px 0px #000000, 0px 0px 15px black;
+  text-shadow: 4px 4px 0 #000000, 0 0 15px black;
   font-size: 6rem;
 }
 .key-takeaway p {
   background: rgba(0, 0, 0, 0.6);
-  text-shadow: 0px 0px 20px black;
+  text-shadow: 0 0 20px black;
   padding: 1rem;
   font-size: 2rem;
   font-weight: 400;
