--- a/app/next/public/styles/site/_layout.scss
+++ b/app/next/public/styles/site/_layout.scss
@@ -310,11 +310,21 @@
   article {
     break-inside: avoid-column;
   }
-  @media screen and (max-width: 786px) {
+  @media screen and (max-width: 1024px) {
     column-count: 2;
   }
   @media screen and (max-width: 480px) {
     column-count: 1;
+  }
+  
+  h3 {
+    margin: 0;
+  }
+  
+  table img {
+    display: inline;
+    width: 36px;
+    border-radius: 100%;
   }
 }
 
@@ -455,8 +465,8 @@
 
 .pending-team-grid {
   display: grid;
-  grid-column-gap: 0;
-  grid-row-gap: 0;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
   @media screen and (max-width: 767px) {
