Added basic info with logo

--- a/app/next/public/styles/beach-bash-tournament.css
+++ b/app/next/public/styles/beach-bash-tournament.css
@@ -23,14 +23,15 @@
 
 .beach-bash-hero-container {
   position: relative;
-  padding-top: 1em;
 }
 .beach-bash-hero-container .jumbotron {
   background: none;
   color: white;
+  padding-top: 0;
 }
 .beach-bash-hero-container img {
-  max-width: 80%;
+  max-width: 60%;
+  max-height: 500px;
 }
 .beach-bash-hero-container .tagline {
   background: rgba(0, 0, 0, 0.44);
@@ -48,8 +49,8 @@
 }
 
 .btn-primary, .credits {
-  background-color: #90c4cf;
-  border-color: #1c515d;
+  background-color: #f240ae;
+  border-color: #ef109a;
 }
 
 .btn-primary:hover {
@@ -61,7 +62,7 @@
   color: #1c515d;
 }
 .site-footer .fa {
-  background-color: #90c4cf;
+  background-color: #f240ae;
 }
 
 .team-list-tournament {
@@ -79,6 +80,21 @@
   .team-list-tournament {
     grid-template-columns: 1fr;
   }
+}
+
+.bird-wing-background {
+  position: relative;
+}
+.bird-wing-background:before {
+  content: "";
+  position: absolute;
+  background-image: url("/images/beach-bash-2025-logo-bird.svg");
+  opacity: 0.1;
+  background-size: 100% auto;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  left: -62%;
 }
 
 /*# sourceMappingURL=beach-bash-tournament.css.map */
