--- a/app/next/public/styles/beach-bash-tournament.css
+++ b/app/next/public/styles/beach-bash-tournament.css
@@ -164,7 +164,8 @@ h1, h2, h3, h4, h5, h6, .btn {
 }
 .photo-copy h3 {
   margin-top: 0;
-  font-size: 2em;
+  font-size: 2.5em;
+  margin-bottom: 1rem;
 }
 .photo-copy strong {
   border-bottom: 4px solid #17d2e0;
