--- a/app/next/public/styles/beach-bash-tournament.scss
+++ b/app/next/public/styles/beach-bash-tournament.scss
@@ -159,7 +159,8 @@ h1, h2, h3, h4, h5, h6, .btn {
   }
   h3 {
     margin-top: 0;
-    font-size: 2em;
+    font-size: 2.5em;
+    margin-bottom: 1rem;
   }
   strong {
     border-bottom: 4px solid #17d2e0;
