--- a/app/next/public/styles/beach-bash-tournament.css
+++ b/app/next/public/styles/beach-bash-tournament.css
@@ -51,6 +51,7 @@ h1, h2, h3, h4, h5, h6, .btn {
 .beach-bash-hero-container img {
   max-width: 60%;
   max-height: 500px;
+  margin-bottom: -30px;
 }
 .beach-bash-hero-container .tagline {
   background: rgba(0, 0, 0, 0.44);
@@ -216,6 +217,40 @@ h1, h2, h3, h4, h5, h6, .btn {
 @media screen and (min-width: 700px) {
   .photo-bg {
     height: 700px;
+  }
+}
+
+.beach-countdown {
+  display: flex;
+  font-family: "Oswald", sans-serif;
+  justify-content: space-around;
+  text-transform: uppercase;
+}
+.beach-countdown span {
+  display: flex;
+  flex-direction: column;
+  background: rgba(24, 210, 225, 0.5098039216);
+  height: 150px;
+  width: 150px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  border: 3px solid rgba(242, 65, 175, 0.4784313725);
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6509803922);
+}
+@media screen and (max-width: 600px) {
+  .beach-countdown span {
+    height: 75px;
+    width: 75px;
+  }
+}
+.beach-countdown strong {
+  font-size: 8rem;
+  line-height: 1;
+}
+@media screen and (max-width: 600px) {
+  .beach-countdown strong {
+    font-size: 3rem;
   }
 }
 
