--- a/app/next/public/styles/beach-bash-tournament.scss
+++ b/app/next/public/styles/beach-bash-tournament.scss
@@ -47,6 +47,7 @@ h1, h2, h3, h4, h5, h6, .btn {
   img {
     max-width: 60%;
     max-height: 500px;
+    margin-bottom: -30px;
   }
 
   .tagline {
@@ -205,5 +206,36 @@ h1, h2, h3, h4, h5, h6, .btn {
   color: white;
   @media screen and (min-width: 700px) {
     height: 700px;
+  }
+}
+
+.beach-countdown {
+  display: flex;
+  font-family: "Oswald", sans-serif;
+  justify-content: space-around;
+  text-transform: uppercase;
+  span {
+    display: flex;
+    flex-direction: column;
+    background: #18d2e182;
+    height: 150px;
+    width: 150px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    border: 3px solid #f241af7a;
+    box-shadow: 1px 1px 6px #000000a6;
+    @media screen and (max-width: 600px) {
+      height: 75px;
+      width: 75px;
+      
+    }
+  }
+  strong {
+    font-size: 8rem;
+    line-height: 1;
+    @media screen and (max-width: 600px) {
+      font-size: 3rem;
+    }
   }
 }
