Added to calendar functionality added

--- a/app/next/public/styles/site.css
+++ b/app/next/public/styles/site.css
@@ -7623,4 +7623,12 @@ button.close {
   letter-spacing: 3px;
 }
 
+.event-btn {
+  position: relative;
+  padding: 1.1rem 1rem;
+  font-weight: 400;
+  font-size: 16px;
+  bottom: 2px;
+}
+
 /*# sourceMappingURL=site.css.map */
