--- a/app/next/public/styles/site/_layout.scss
+++ b/app/next/public/styles/site/_layout.scss
@@ -527,3 +527,12 @@
     letter-spacing: 3px;
   }
 }
+
+
+.event-btn {
+  position: relative;
+  padding: 1.1rem 1rem;
+  font-weight: 400;
+  font-size: 16px;
+  bottom: 2px;
+}
