--- a/app/next/public/styles/site/_variables.scss
+++ b/app/next/public/styles/site/_variables.scss
@@ -6,5 +6,6 @@ $headings-font-family: "Roboto Condensed", $font-family-sans-serif;
 $headings-font-weight: 700;
 
 $primary: darken(#9b59b6, 10%);
+$border-color: #9696a5;
 //$font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 //$headings-font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
